[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
name = "yasi"
version = "0.1.0"
edition = "2021"
description = "Yet Another String Interner"
license = "MIT"
documentation = "https://docs.rs/yasi"
repository = "https://github.com/Start9Labs/yasi.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
hashbrown = { version = "0.13.2", features = ["raw"] }
lazy_static = "1.4.0"
