[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
name = "yasi"
version = "0.1.3"
edition = "2021"
description = "Yet Another String Interner"
license = "MIT"
documentation = "https://docs.rs/yasi"
repository = "https://github.com/Start9Labs/yasi.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["serde"]

[dependencies]
ahash = "0.8.3"
hashbrown = { version = "0.13", features = ["raw"] }
lazy_static = "1.4"
serde = { version = "1", optional = true }
